Fix scrollbar on dialogs, no default type in add loot

--- a/src/app/dialog/common-dialog.scss
+++ b/src/app/dialog/common-dialog.scss
@@ -10,10 +10,6 @@ mat-dialog-content {
   loot-card {
     align-self: center;
   }
-
-  mat-form-field {
-    margin: 4px;
-  }
 }
 
 .dialog-string {
